Update to stabilizing loop times